; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/Matmul/extr_matmul_c.c_mm_gen.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/Matmul/extr_matmul_c.c_mm_gen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double** @mm_gen(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca double**, align 8
  %4 = alloca double, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = sitofp i32 %7 to double
  %9 = fdiv double 1.000000e+00, %8
  %10 = load i32, i32* %2, align 4
  %11 = sitofp i32 %10 to double
  %12 = fdiv double %9, %11
  store double %12, double* %4, align 8
  %13 = load i32, i32* %2, align 4
  %14 = call double** @mm_init(i32 %13)
  store double** %14, double*** %3, align 8
  store i32 0, i32* %5, align 4
  br label %15

15:                                               ; preds = %48, %1
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %2, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %51

19:                                               ; preds = %15
  store i32 0, i32* %6, align 4
  br label %20

20:                                               ; preds = %44, %19
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %2, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %47

24:                                               ; preds = %20
  %25 = load double, double* %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %6, align 4
  %28 = sub nsw i32 %26, %27
  %29 = sitofp i32 %28 to double
  %30 = fmul double %25, %29
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %31, %32
  %34 = sitofp i32 %33 to double
  %35 = fmul double %30, %34
  %36 = load double**, double*** %3, align 8
  %37 = load i32, i32* %5, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds double*, double** %36, i64 %38
  %40 = load double*, double** %39, align 8
  %41 = load i32, i32* %6, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds double, double* %40, i64 %42
  store double %35, double* %43, align 8
  br label %44

44:                                               ; preds = %24
  %45 = load i32, i32* %6, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %6, align 4
  br label %20

47:                                               ; preds = %20
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %5, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %5, align 4
  br label %15

51:                                               ; preds = %15
  %52 = load double**, double*** %3, align 8
  ret double** %52
}

declare dso_local double** @mm_init(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
